--- a/source/BigStar.RazorPageApp/Pages/Shared/_Layout.cshtml
+++ b/source/BigStar.RazorPageApp/Pages/Shared/_Layout.cshtml
@@ -50,9 +50,9 @@
 						</li>
 
 						<li class="nav-item" style="background:#dddddd">
-							<a class="nav-link text-dark" asp-area="" asp-page="/Privacy">About</a>
+							<a class="nav-link text-dark" asp-area="" asp-page="/About">About</a>
 						</li>
-					</ul>
+					</ul>	
 				</div>
 			</div>
 		</nav>
